# cs205-c-cpp-projects

./: README.md
project1 caculator/: calculator  calculator.c  project1(2).pdf:Zone.Identifier  report.md
project2 Matrix Multiplication/: MatrixMultiplication.c  MatrixMultiplication.java  MatrixMultiplicationTest.java  report.md  test.c
project3 Improved Matrix Multiplication/: benchmark.cpp  main.c  matrix.c  matrix.h  mul.c  report.md
project3 Improved Matrix Multiplication/src/: Plot.m  PlotAll.m  PlotAll2.m  PlotAll2_script.m  PlotAll_block.m  octave-workspace  result.txt
project3 Improved Matrix Multiplication/src/data/: BM_GEMM_BLOCKED_OPENMP.m  BM_GEMM_BLOCKED_PACKED_OPENMP.m  BM_GEMM_CBLAS.m  BM_GEMM_IKJ_OPENMP.m  BM_Plain_GEMM_IJK.m  BM_Plain_GEMM_IJK_BLOCKED.m  BM_Plain_GEMM_IJK_BLOCKED_128_8.m  BM_Plain_GEMM_IJK_BLOCKED_2.m  BM_Plain_GEMM_IJK_BLOCKED_64_64.m  BM_Plain_GEMM_IJK_BLOCKED_AVX.m  BM_Plain_GEMM_IJK_BLOCKED_AVX_2.m  BM_Plain_GEMM_IJK_BLOCKED_AVX_3.m  BM_Plain_GEMM_IKJ.m  BM_Plain_GEMM_IKJ_2.m  BM_Plain_GEMM_IKJ_BLOCKED.m  BM_Plain_GEMM_JIK.m  BM_Plain_GEMM_JKI.m  BM_Plain_GEMM_KIJ.m  BM_Plain_GEMM_KJI.m  GEMM_BLOCKED_128_128_1.m  GEMM_BLOCKED_128_128_128.m  GEMM_BLOCKED_128_128_256.m  GEMM_BLOCKED_128_128_64.m  GEMM_BLOCKED_128_256_128.m  GEMM_BLOCKED_128_64_128.m  GEMM_BLOCKED_128_8_128.m  GEMM_BLOCKED_16_16_16.m  GEMM_BLOCKED_256_256_256.m  GEMM_BLOCKED_32_32_32.m  GEMM_BLOCKED_64_128_128.m  GEMM_BLOCKED_64_128_64.m  GEMM_BLOCKED_64_64_64.m  GEMM_BLOCKED_OPENMP.m  GEMM_BLOCKED_PACKED.m  GEMM_BLOCKED_PACKED_AVX.m  GEMM_BLOCKED_PACKED_AVX_1_OPENMP.m  (+7 more)
project4 A Class to Describe a Matrix/: report.md
project4 A Class to Describe a Matrix/src/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.hpp
project5 GPU Acceleration with CUDA/: CMakeLists.txt  report.md  results.json
project5 GPU Acceleration with CUDA/src/: CMakeLists.txt  benchmark.cu  matrix.h  mul.cu  mulAdd.cu  mul_test.cu
